--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,18 @@
+version: '3.9'
+
 services:
   zapret-proxy:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: zapret-proxy
-    privileged: true # Требуется для работы iptables
+    privileged: true # Требуется для работы iptables и systemd
     network_mode: "host" # Используем host-сеть для управления трафиком
+    tmpfs:
+      - /run
+      - /run/lock
     volumes:
-      - ./zapret:/opt/zapret # Монтируем директорию с zapret
+      - /sys/fs/cgroup:/sys/fs/cgroup:ro # Монтируем cgroup
+      - ./zapret:/opt/zapret:ro # Конфигурация zapret
     stdin_open: true
     tty: true
