--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
-version: '3.9'
-
 services:
   zapret-proxy:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: zapret-proxy
-    privileged: true # Требуется для работы iptables и systemd
-    network_mode: "host" # Используем host-сеть для управления трафиком
+    privileged: true  # Требуется для работы iptables
+    # network_mode: "host"  # Используем host-сеть для управления трафиком
     tmpfs:
       - /run
       - /run/lock
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro # Монтируем cgroup
-      - ./zapret:/opt/zapret:ro # Конфигурация zapret
     stdin_open: true
-    tty: true
+    tty: true  # Для запуска systemd
+    ports:
+      - "3128:3128"
