--- a/config
+++ b/config
@@ -54,8 +54,8 @@ TPPORT_SOCKS=987
 # hostlist markers are replaced to empty string if MODE_FILTER does not satisfy
 # <HOSTLIST_NOAUTO> appends ipset/zapret-hosts-auto.txt as normal list
 TPWS_SOCKS_OPT="
---filter-tcp=80 --methodeol <HOSTLIST> --new
---filter-tcp=443 --split-pos=1,midsld --disorder <HOSTLIST>
+--filter-tcp=80 --dpi-desync=fakedsplit --dpi-desync-ttl=8 --dpi-desync-split-pos=method+2 <HOSTLIST> --new
+--filter-tcp=443 --dpi-desync=fake --dpi-desync-ttl=8 <HOSTLIST> --new
 "
 
 TPWS_ENABLE=0
@@ -64,14 +64,14 @@ TPWS_PORTS=80,443
 # hostlist markers are replaced to empty string if MODE_FILTER does not satisfy
 # <HOSTLIST_NOAUTO> appends ipset/zapret-hosts-auto.txt as normal list
 TPWS_OPT="
---filter-tcp=80 --methodeol <HOSTLIST> --new
---filter-tcp=443 --split-pos=1,midsld --disorder <HOSTLIST>
+--filter-tcp=80 --dpi-desync=fakedsplit --dpi-desync-ttl=8 --dpi-desync-split-pos=method+2 <HOSTLIST> --new
+--filter-tcp=443 --dpi-desync=fake --dpi-desync-ttl=8 <HOSTLIST> --new
 "
 
 NFQWS_ENABLE=1
 # redirect outgoing traffic with connbytes limiter applied in both directions.
 NFQWS_PORTS_TCP=80,443
-NFQWS_PORTS_UDP=443
+NFQWS_PORTS_UDP=443,50000-50099
 # PKT_OUT means connbytes dir original
 # PKT_IN means connbytes dir reply
 # this is --dpi-desync-cutoff=nX kernel mode implementation for linux. it saves a lot of CPU.
@@ -88,7 +88,10 @@ NFQWS_UDP_PKT_IN=0
 # use <HOSTLIST> and <HOSTLIST_NOAUTO> placeholders to engage standard hostlists and autohostlist in ipset dir
 # hostlist markers are replaced to empty string if MODE_FILTER does not satisfy
 # <HOSTLIST_NOAUTO> appends ipset/zapret-hosts-auto.txt as normal list
-NFQWS_OPT="--filter-tcp=80 --dpi-desync=fakedsplit --dpi-desync-ttl=5 --dpi-desync-split-pos=method+2 <HOSTLIST> --new --filter-tcp=443 --dpi-desync=fake --dpi-desync-ttl=5 <HOSTLIST> --new --filter-udp=443 --dpi-desync=fake --dpi-desync-repeats=6 <HOSTLIST_NOAUTO>"
+NFQWS_OPT="--filter-tcp=80 --dpi-desync=fakedsplit --dpi-desync-ttl=8 --dpi-desync-split-pos=method+2 <HOSTLIST> --new
+--filter-tcp=443 --dpi-desync=fake --dpi-desync-ttl=8 <HOSTLIST> --new
+--filter-udp=443 --dpi-desync=fake --dpi-desync-ttl=8 <HOSTLIST_NOAUTO>
+"
 
 # none,ipset,hostlist,autohostlist
 MODE_FILTER=none
