--- a/config
+++ b/config
@@ -54,7 +54,7 @@ TPPORT_SOCKS=987
 # hostlist markers are replaced to empty string if MODE_FILTER does not satisfy
 # <HOSTLIST_NOAUTO> appends ipset/zapret-hosts-auto.txt as normal list
 TPWS_SOCKS_OPT="
---filter-tcp=80 --dpi-desync=fakedsplit --dpi-desync-ttl=8 --dpi-desync-split-pos=method+2 <HOSTLIST> --new
+--filter-tcp=80 --dpi-desync=fake --dpi-desync-ttl=8 <HOSTLIST> --new
 --filter-tcp=443 --dpi-desync=fake --dpi-desync-ttl=8 <HOSTLIST> --new
 "
 
@@ -64,7 +64,7 @@ TPWS_PORTS=80,443
 # hostlist markers are replaced to empty string if MODE_FILTER does not satisfy
 # <HOSTLIST_NOAUTO> appends ipset/zapret-hosts-auto.txt as normal list
 TPWS_OPT="
---filter-tcp=80 --dpi-desync=fakedsplit --dpi-desync-ttl=8 --dpi-desync-split-pos=method+2 <HOSTLIST> --new
+--filter-tcp=80 --dpi-desync=fake --dpi-desync-ttl=8 <HOSTLIST> --new
 --filter-tcp=443 --dpi-desync=fake --dpi-desync-ttl=8 <HOSTLIST> --new
 "
 
@@ -88,7 +88,7 @@ NFQWS_UDP_PKT_IN=0
 # use <HOSTLIST> and <HOSTLIST_NOAUTO> placeholders to engage standard hostlists and autohostlist in ipset dir
 # hostlist markers are replaced to empty string if MODE_FILTER does not satisfy
 # <HOSTLIST_NOAUTO> appends ipset/zapret-hosts-auto.txt as normal list
-NFQWS_OPT="--filter-tcp=80 --dpi-desync=fakedsplit --dpi-desync-ttl=8 --dpi-desync-split-pos=method+2 <HOSTLIST> --new
+NFQWS_OPT="--filter-tcp=80 --dpi-desync=fake --dpi-desync-ttl=8 <HOSTLIST> --new
 --filter-tcp=443 --dpi-desync=fake --dpi-desync-ttl=8 <HOSTLIST> --new
 --filter-udp=443 --dpi-desync=fake --dpi-desync-ttl=8 <HOSTLIST_NOAUTO>
 "
