--- a/configs/squid.conf
+++ b/configs/squid.conf
@@ -1,41 +1,84 @@
-acl manager proto cache_object
-acl localhost src 127.0.0.1/32
-acl to_localhost dst 127.0.0.0/8
-acl localnet src 0.0.0.0/8 192.168.100.0/24 192.168.101.0/24
-acl SSL_ports port 443
-acl Safe_ports port 80          # http
-acl Safe_ports port 21          # ftp
-acl Safe_ports port 443         # https
-acl Safe_ports port 70          # gopher
-acl Safe_ports port 210         # wais
-acl Safe_ports port 1025-65535  # unregistered ports
-acl Safe_ports port 280         # http-mgmt
-acl Safe_ports port 488         # gss-http
-acl Safe_ports port 591         # filemaker
-acl Safe_ports port 777         # multiling http
+http_port 3128
+cache deny all
+hierarchy_stoplist cgi-bin ?
 
+# access_log none
+access_log /var/log/squid3/access.log squid
+
+cache_effective_user proxy
+cache_store_log none
+cache_log /dev/null
+coredump_dir /var/spool/squid3
+
+refresh_pattern ^ftp:           1440    20%     10080
+refresh_pattern ^gopher:        1440    0%      1440
+refresh_pattern -i (/cgi-bin/|\?) 0     0%      0
+refresh_pattern .               0       20%     4320
+
+acl localhost src 127.0.0.1/32 ::1
+acl to_localhost dst 127.0.0.0/8 0.0.0.0/32 ::1
+acl to_localnet dst 192.168.0.0/16
+
+acl SSL_ports port 1-65535
+acl Safe_ports port 1-65535
 acl CONNECT method CONNECT
+
+# acl siteblacklist dstdomain "/etc/squid/blacklist.acl"
+# acl sitewhitelist dstdomain "/etc/squid/whitelist.acl"
 
 http_access allow manager localhost
 http_access deny manager
 http_access deny !Safe_ports
-
 http_access deny to_localhost
+
+# Local net
+# http_access allow to_localnet
+http_access deny to_localnet
+
 icp_access deny all
 htcp_access deny all
+http_access deny CONNECT !SSL_ports
+# http_access deny siteblacklist
+# http_access allow sitewhitelist
 
-cache_effective_user proxy
-http_port 3128
-hierarchy_stoplist cgi-bin ?
-access_log /var/log/squid3/access.log squid
-
-#Suggested default:
-refresh_pattern ^ftp:           1440    20%     10080
-refresh_pattern ^gopher:        1440    0%      1440
-refresh_pattern -i (/cgi-bin/|\?) 0 0% 0
-refresh_pattern .               0       20%     4320
-# Leave coredumps in the first cache dir
-coredump_dir /var/spool/squid3
-
-# Allow all machines to all sites
+# Comment line below if auth is enabled
 http_access allow all
+
+# Uncomment lines below to enable auth
+# auth_param basic program /usr/lib/squid/basic_ncsa_auth /squid_passwd/passwd
+# auth_param basic children 5
+# auth_param basic realm Squid proxy-caching web server
+# auth_param basic credentialsttl 2 hours
+# acl password proxy_auth REQUIRED
+# http_access allow password
+
+forwarded_for off
+request_header_access Allow allow all
+request_header_access Authorization allow all
+request_header_access WWW-Authenticate allow all
+request_header_access Proxy-Authorization allow all
+request_header_access Proxy-Authenticate allow all
+request_header_access Cache-Control allow all
+request_header_access Content-Encoding allow all
+request_header_access Content-Length allow all
+request_header_access Content-Type allow all
+request_header_access Date allow all
+request_header_access Expires allow all
+request_header_access Host allow all
+request_header_access If-Modified-Since allow all
+request_header_access Last-Modified allow all
+request_header_access Location allow all
+request_header_access Pragma allow all
+request_header_access Accept allow all
+request_header_access Accept-Charset allow all
+request_header_access Accept-Encoding allow all
+request_header_access Accept-Language allow all
+request_header_access Content-Language allow all
+request_header_access Mime-Version allow all
+request_header_access Retry-After allow all
+request_header_access Title allow all
+request_header_access Connection allow all
+request_header_access Proxy-Connection allow all
+request_header_access User-Agent allow all
+request_header_access Cookie allow all
+request_header_access All deny all
