chore: rename squid_passwd mount point into squid

--- a/configs/squid.conf
+++ b/configs/squid.conf
@@ -45,7 +45,7 @@ http_access deny CONNECT !SSL_ports
 http_access allow all
 
 # Uncomment lines below to enable auth
-# auth_param basic program /usr/lib/squid/basic_ncsa_auth /squid_passwd/passwd
+# auth_param basic program /usr/lib/squid/basic_ncsa_auth /squid/passwd
 # auth_param basic children 5
 # auth_param basic realm Squid proxy-caching web server
 # auth_param basic credentialsttl 2 hours
