chore: notes about blacklist and whitelist

--- a/configs/squid.conf
+++ b/configs/squid.conf
@@ -23,8 +23,9 @@ acl SSL_ports port 1-65535
 acl Safe_ports port 1-65535
 acl CONNECT method CONNECT
 
-# acl siteblacklist dstdomain "/etc/squid/blacklist.acl"
-# acl sitewhitelist dstdomain "/etc/squid/whitelist.acl"
+# You can create this files if needed and uncomment http_access deny / allow siteblacklist / sitewhitelist
+# acl siteblacklist dstdomain "/squid/sites.blacklist.txt"
+# acl sitewhitelist dstdomain "/squid/sites.whitelist.txt"
 
 http_access allow manager localhost
 http_access deny manager
