--- a/configs/squid.conf
+++ b/configs/squid.conf
@@ -1,6 +1,6 @@
 http_port 3128
 cache deny all
-hierarchy_stoplist cgi-bin ?
+# hierarchy_stoplist cgi-bin ?
 
 # access_log none
 access_log /var/log/squid3/access.log squid
